Updated primary color.

--- a/employees-frontend/src/style.css
+++ b/employees-frontend/src/style.css
@@ -4,6 +4,6 @@ body {
 }
 
 .css-c1bgk0-RaLogin-root{
-    background-color: #fdeeee !important;
+    background-color: #e9f3e5 !important;
     background-image: none !important;
 }
